# ItemsSimilarity-rust

./: .gitignore  README.md
migrate_data/: .env  Cargo.toml
migrate_data/src/: dump.rs  main.rs  models.rs  store.rs  tokenize.rs
recommend/: Cargo.toml
recommend/src/: main.rs
