[package]
name = "get_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
uuid = "1.3.0"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "uuid" ] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
postgres-types = "0.2.4"
gremlin-client = { version = "0.8", features = ["async-std-runtime"] }
clap = { version = "4.2.1", features = [ "derive" ] }
ndarray = "0.15.6"
rust-stemmers = "1.2.0"
ndarray-linalg = { version = "0.16.0" }
whatlang = "0.16.2"
