[package]
name = "recommend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
gremlin-client = { version = "0.8.3", features = ["async-std-runtime"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.3.1"
serde = { version = "1.0.130", features = ["derive"] }
